Changing burp-pro script